--- a/scss/lib/_variable.scss
+++ b/scss/lib/_variable.scss
@@ -3,8 +3,10 @@
 // =========================================================
 
 // Fonts
-$font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue",
-  Arial, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+$font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI",
+  "Hiragino Sans", "Yu Gothic UI", "Yu Gothic", Meiryo,
+  "Helvetica Neue", Arial, sans-serif;
+
 $font-family-monospace: "Monaco", "Consolas", "Courier New", Courier, monospace, sans-serif;
 
 // Palette (based on provided image)
